# ITBench-SRE-Agent

./: .env.tmpl  .gitattributes  .gitignore  .gitmodules  INSTALL.md  README.agentz.md  README.md  agent-harness-sre.yaml  agent.toml.example  create_leaderboard.py  litellm_config.yaml  model_leaderboard.toml  pyproject.toml  reeval_judge.py  requirements.txt  sre-agent-harness.Dockerfile  todo.md
agent_outputs/2/1/: AGENTS.md  agent_output.json  agent_remediation.json  app.json  config.toml
agent_outputs/2/1/prompts/: react_shell_investigation.md  remediation_plan.md
agent_outputs/2/1/sessions/2026/01/15/: rollout-2026-01-15T11-08-40-019bc26a-8a6c-7f43-8605-0aa1c35bd7f8.jsonl  rollout-2026-01-15T11-10-13-019bc26b-f3d8-7292-8d00-373e3e0ca548.jsonl  rollout-2026-01-15T11-10-50-019bc26c-84ee-7720-8e3d-2c38dc8ae4af.jsonl  rollout-2026-01-15T11-12-20-019bc26d-e385-7290-ab38-0a7a81b3dbb8.jsonl  rollout-2026-01-15T11-13-01-019bc26e-85ab-7b31-83f1-d7d4e2e19aa3.jsonl  rollout-2026-01-15T11-13-25-019bc26e-e1d3-74e0-ab41-a398b70dba7c.jsonl  (+22 more)
agentz/: __init__.py  __main__.py  cli.py  config.py  runner.py  tracing.py
agentz/agentz-config/: README.md
agentz/agentz-config/policy/: sre_support_engineer.codexpolicy
agentz/agentz-config/prompts/: sre_support_engineer.md
datasets/application_code/: otel_demo_application_architecture.json
deployments/ansible/roles/sre_agent/tasks/: leverage_port_forwarding.yaml
evaluation/: __init__.py  laaj.py  prompts.py
itbench_evaluations/: DESIGN.md  __init__.py  __main__.py  agent.py  aggregator.py  client.py  json_fixer.py  loader.py  namespace_filter.py
itbench_evaluations/prompts/: __init__.py  entity_correctness.py  entity_correctness_k.py  fault_localization.py  few_shot.py  main.py  propagation_chain.py  proximity.py  proximity_fp.py  reasoning_correctness.py  reasoning_partial.py  remediation_plan.py  semantic_grouping.py
itbench_judge/: README.md  __init__.py
itbench_judge/sre/: __init__.py  evaluator.py  prompts.py
src/lumyn/: crew_finops.py  main.py  main_finops.py
src/lumyn/config/: finops_agents.yaml  finops_tasks.yaml  tools.py
src/lumyn/llm_backends/: init_backend.py  litellm_backend.py
src/lumyn/tests/: test_anomaly_detector.py
src/lumyn/tools/: anomaly_detection.py
src/lumyn/tools/linting/: sql_linter.py
src/lumyn/tools/observability_stack/: clickhouse_base_client.py  clickhouse_nl2sql.py  nl2traces.py
sre_support_agent/: __init__.py  __main__.py  config.py  graph.py  langchain_tools.py  main.py  prompts.py
sre_support_agent/tools/: __init__.py  file_tools.py  search_tools.py  system_tools.py  task_tools.py
sre_tools/: README.md  __init__.py  manifest.toml  utils.py
sre_tools/cli/: __init__.py
sre_tools/cli/sre_utils/: __init__.py  __main__.py  tools.py
sre_tools/clickhouse_mcp/: __init__.py
sre_tools/docs/: readme.trace_analysis.md
sre_tools/instana_mcp/: __init__.py
sre_tools/kubernetes_mcp/: __init__.py
sre_tools/offline_incident_analysis/: __init__.py  __main__.py  extracted_tool_defs.txt  tool_definitions.py  tools.py  tools_new.py
sre_tools/offline_incident_analysis/alerts/: analyzer.py  tools.py
sre_tools/offline_incident_analysis/context/: aggregator.py  cli.py  tools.py
sre_tools/offline_incident_analysis/events/: analyzer.py  tools.py
sre_tools/offline_incident_analysis/k8s_specs/: change_analyzer.py  retriever.py  tools.py
sre_tools/offline_incident_analysis/logs/: analyzer.py  tools.py
sre_tools/offline_incident_analysis/metrics/: analyzer.py  anomalies.py  tools.py
sre_tools/offline_incident_analysis/shared/: __init__.py  filters.py  formatters.py  k8s_utils.py  parsers.py  time_utils.py
sre_tools/offline_incident_analysis/topology/: analyzer.py  builder.py  cli.py  tools.py
sre_tools/offline_incident_analysis/traces/: __init__.py  analyzer.py  stats.py  tools.py
zero/: __init__.py  __main__.py  cli.py  config.py  runner.py  spec.md  tracing.py
zero/zero-config/: README.md  config.toml
zero/zero-config/prompts/: README.md  finops_linear_analyses_shell_investigation.md  react_online.md  react_online_base.md  react_online_instana.md  sre_react_online.md  sre_react_online_instana.md  sre_react_shell_investigation.md  sre_support_engineer_v0.md  sre_support_engineer_v1.md
zero/zero-config/prompts/data_sources/: clickhouse.md  instana.md  kubernetes.md
