[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
    # Evaluations dependencies (LLM-as-a-Judge)
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "asteval>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # MCP tools dependencies
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "drain3>=0.9.11", # Log pattern mining (Drain algorithm)
    "opentelemetry-proto>=1.24.0", # OTLP protobuf decoding
    # Leaderboard (connection testing)
    "requests>=2.28.0",
    # Proxy bridge (async HTTP with connection pooling)
    "aiohttp>=3.9.0",
    # Config parsing (Python 3.11+ has tomllib built-in, fallback for older)
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli_w>=1.0.0",  # TOML writing for eog_leaderboard agent configs
]
description = "ITBench SRE Agent - AI-powered incident investigation for SRE benchmarks"
name = "itbench-sre-agent"
optional-dependencies = { dev = ["black>=24.0.0", "isort>=5.13.0", "ruff>=0.1.0"] }
requires-python = ">=3.12"
scripts = { itbench-leaderboard = "itbench_leaderboard.cli:main", eog-leaderboard = "eog_leaderboard.cli:main", itbench-eval = "itbench_evaluations.__main__:main", zero = "zero.cli:main", sre-proxy-bridge = "proxy_bridge.server:main" }
version = "0.2.0"

[tool.hatch.build.targets.wheel]
packages = ["zero", "proxy_bridge", "sre_tools", "itbench_evaluations", "itbench_leaderboard", "eog_leaderboard"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
line_length = 120
profile = "black"
