[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
    # Evaluations dependencies (LLM-as-a-Judge)
    "openai>=1.0.0",
    "pyyaml>=6.0.0",
    "asteval>=1.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    # MCP tools dependencies
    "mcp>=1.0.0",
    "pandas>=2.0.0",
    "drain3>=0.9.11", # Log pattern mining (Drain algorithm)
    "opentelemetry-proto>=1.24.0", # OTLP protobuf decoding
    # Config parsing (Python 3.11+ has tomllib built-in, fallback for older)
    "tomli>=2.0.0;python_version<'3.11'",
    "tomli_w>=1.0.0", # TOML writing
    "litellm>=1.80.11",
    "litellm[proxy]>=1.80.11",
    # Kubernetes MCP Server (Python-based, no container needed)
    "mcp-kubernetes-server>=0.0.1",
    # Dataset download
    "huggingface-hub>=0.20.0",
]
description = "ITBench SRE Agent - AI-powered incident investigation for SRE benchmarks"
name = "itbench-sre-agent"
requires-python = ">=3.12,<3.14"
version = "0.2.0"

[project.optional-dependencies]
dev = ["black>=24.0.0", "isort>=5.13.0", "ruff>=0.1.0"]

[project.scripts]
itbench-eval = "itbench_evaluations.__main__:main"
zero = "zero.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["zero", "sre_tools", "itbench_evaluations"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 120
target-version = ["py313"]

[tool.isort]
line_length = 120
profile = "black"
